--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.iconTheme": "material-icon-theme",
-  "workbench.colorTheme": "Tomorrow",
+  "workbench.colorTheme": "Cobalt2",
   "terminal.integrated.fontSize": 16,
   "editor.fontSize": 16,
   "terminal.integrated.defaultProfile.linux": "bash",
